wrap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a {
 
 .slider-btn {
     width: 240px;
-    padding: 19px 54px;
+    padding: 19px 0px;
     background-color: #fb565a;
 }
 
@@ -121,6 +121,7 @@ a {
 
 .logo {
     width: 160px;
+    margin-right: 20px;
 }
 
 .logo:hover {
@@ -138,10 +139,11 @@ a {
     padding: 0px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .site-navigation-item {
-    display: inline-block;  
+     margin-right: 20px;
 }
 
 .site-navigation-link:hover {
@@ -153,6 +155,7 @@ a {
     text-align: right;
     position: relative;
     padding-left: 40px;
+    margin-left: 20px;
 }
 
 .user-cart::before {
@@ -178,7 +181,25 @@ a {
     min-height: 420px;
 }
 
+.magazine-header {
+    background-color: #eeeeee;
+}
 
+.header-h1 {
+    min-height: 240px;
+    margin-bottom: 60px;
+}
+.header-h1 h1 {
+    margin-top: 0px;
+    padding: 100px 0px;
+    color: #000000;
+    vertical-align: middle;
+    font-size: 55px;
+    line-height: 55px;
+    font-weight: 500;
+    text-align: center;
+    vertical-align: middle;
+}
 
 
 /* Слайдер мать его за ногу */
@@ -289,6 +310,7 @@ a {
 .features {
     min-height: 430px;
     display: flex;
+    flex-wrap: wrap;
     border-bottom: 2px solid #eeeeee;
     margin-bottom: 40px;
 }
@@ -297,6 +319,7 @@ a {
     max-width: 300px;
     min-height: 350px;
     margin-right: 80px;
+    margin-bottom: 80px;
 }
 
 .features-item img {
@@ -412,6 +435,7 @@ a {
     min-height: 180px;
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     padding: 0 auto;
     align-items: center;
     border-bottom: 2px solid #eeeeee;
@@ -541,3 +565,8 @@ a {
 .let-friend p {
     line-height: 22px;
 }
+
+
+
+/* Стили для страницы МАГАЗИН */
+
